# moveSongsFromPirate

./: .gitignore  pyproject.toml  settings.py  test_use_case.py
export/: __init__.py  spotify.py  utils.py
import/: telegram.py  test.py
importTelegram/: clients.py  exceptions.py  mixins.py  utils.py
music_exchanger/: settings.py
music_exchanger/export/: __init__.py
music_exchanger/export/spotify/: __init__.py
music_exchanger/import/telegram/: clients.py  exceptions.py  mixins.py  utils.py
