[tool.poetry]
name = "music_exchanger"
version = "0.0.1"
description = "Exchange music between platforms"
authors = ["nillovych"]
license = "MIT"
packages = [{ include = "music_exchanger" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
telethon = "^1.30.3"
spotipy = "^2.23.0"
tqdm = "^4.67.1"
singleton = "^0.1.0"
qrcode = { version = "^8.1", extras = ["pil"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
